--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,5 +1,7 @@
 <html>
+<form action="/goodbye" method="get">
+    <button type="submit ">click this</button>
+</form>
 
-<button type="submit" formaction="/goodbye.html">I dare you to click this</button>
 
 </html>
