--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,5 +1,5 @@
 <html>
-<form action="/goodbye" method="get">
+<form action="/users/Amy" method="get">
     <button type="submit ">click this</button>
 </form>
 
