changes button name

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,6 +1,6 @@
 <html>
-<form action="/users/Amy" method="get">
-    <button type="submit ">click this</button>
+<form action="/goodbye" method="get">
+    <button type="submit ">Get Users</button>
 </form>
 
 
