Added a bunch of stuff

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,7 +1,3 @@
-<html>
-<form action="/goodbye" method="get">
-    <button type="submit ">Get Users</button>
-</form>
-
-
-</html>
+<div>
+    Hello, {{user}}
+</div>
